# l10n-france

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  requirements.txt
.github/workflows/: test.yml
account_statement_import_fr_cfonb/: README.rst
account_statement_import_fr_cfonb/static/description/: index.html
account_statement_import_fr_cfonb/wizard/: account_statement_import.py
l10n_fr_account_tax_unece/: README.rst  __manifest__.py
l10n_fr_account_tax_unece/static/description/: index.html
l10n_fr_account_vat_return/i18n/: fr.po
l10n_fr_account_vat_return/models/: l10n_fr_account_vat_return.py
l10n_fr_account_vat_return_einvoice_generate/: README.rst
l10n_fr_account_vat_return_einvoice_generate/static/description/: index.html
l10n_fr_chorus_account/: __manifest__.py
l10n_fr_chorus_account/static/description/: index.html
l10n_fr_cog/: README.rst  __manifest__.py
l10n_fr_cog/static/description/: index.html
l10n_fr_das2/: README.rst  __manifest__.py
l10n_fr_das2/models/: l10n_fr_das2.py
l10n_fr_das2/static/description/: index.html
l10n_fr_das2/views/: l10n_fr_das2.xml  res_partner.xml
l10n_fr_department/: README.rst
l10n_fr_department/static/description/: index.html
l10n_fr_department/view/: res_partner.xml
l10n_fr_department_oversea/: README.rst
l10n_fr_department_oversea/static/description/: index.html
l10n_fr_hr_check_ssnid/: README.rst  __manifest__.py
l10n_fr_hr_check_ssnid/static/description/: index.html
l10n_fr_intrastat_product/: README.rst
l10n_fr_intrastat_product/data/: intrastat_product_reminder.xml
l10n_fr_intrastat_product/static/description/: index.html
l10n_fr_intrastat_product/views/: intrastat_fr_regime.xml  intrastat_product_declaration.xml
l10n_fr_intrastat_service/: README.rst  __manifest__.py
l10n_fr_intrastat_service/models/: intrastat_service.py
l10n_fr_intrastat_service/tests/: test_fr_intrastat_service.py
l10n_fr_pos_caisse_ap_ip/: README.rst
l10n_fr_siret/: README.rst  __manifest__.py
l10n_fr_siret/views/: res_partner.xml
l10n_fr_siret_account/: README.rst
l10n_fr_state/: README.rst
setup/_metapackage/: pyproject.toml  setup.py
(+7 files in other folders)
